--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  font-family: 'Indie Flower', cursive;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body, button {
+  font-size: 18px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  background-color: white;
+  padding: 50px;
+  border-radius: 15px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  color: #333;
+  margin-bottom: 30px;
+}
+
+.fact-button {
+  margin: 0 40px;
+  padding: 10px 20px;
+  font-size: 18px;
+}
+
+.get-useless-facts-button {
+  background-color: #e75480;
+  color: white; 
+}
+
+.get-number-fact-button {
+  background-color: #ffcc33;
+  color: black; 
+}
+
+.output-text {
+  color: #32cd32; 
+  margin-top: 30px;
+  font-size: 18px;
+  text-decoration: blueviolet;
+}
+
+
+.fact-button:hover {
+  background-color: #0056b3;
+}
+
+.fact-button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
 }
