Updated Error Message Style and Keyword Input Bar Size

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   justify-content: center;
 }
 
-body, button {
+body, button, input {
   font-size: 18px;
 }
 
@@ -23,10 +23,15 @@ h1 {
   margin-bottom: 30px;
 }
 
-.fact-button {
-  margin: 0 40px;
-  padding: 10px 20px;
-  font-size: 18px;
+.fact-button, .keyword-input {
+  margin: 0 10px; 
+  padding: 10px 20px; 
+}
+
+.keyword-input {
+  width: 240px; 
+  border: 2px solid #81c784; 
+  border-radius: 4px;
 }
 
 .get-useless-facts-button {
@@ -34,8 +39,8 @@ h1 {
   color: white; 
 }
 
-.get-number-fact-button {
-  background-color: #ffcc33;
+.get-gif-button {
+  background-color: #fdd835; 
   color: black; 
 }
 
@@ -46,12 +51,17 @@ h1 {
   text-decoration: blueviolet;
 }
 
-
 .fact-button:hover {
   background-color: #0056b3;
+  color: white;
 }
 
 .fact-button:disabled {
   background-color: #cccccc;
   cursor: not-allowed;
+}
+
+.error-message {
+  color: #6a1b9a;
+  background-color: rgba(255, 255, 255, 0.95); 
 }
